# guile-telegram

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.org  THANKS  configure.ac  example-bot.scm  guix.scm
m4/: Makefile.am
modules/: Makefile.am  telegram.scm
modules/telegram/: Makefile.am  bot.scm
modules/telegram/type/: Makefile.am  chat-permissions.scm  chat-photo.scm  chat.scm  message.scm  telegram-api-type.scm  update.scm  user.scm
